"java -version" crash on sparc with some values of HeapBaseMinAddress

XMLWordPrintable

    • b04
    • generic
    • generic

      Various higher vaues of HeapBaseMinAddress in combination with -Xmx and -XX:MaxPermSize parameters also lead to the same crash. Examples of such combinations:

      -XX:HeapBaseMinAddress=2048m -Xmx1024m -XX:MaxPermSize=1024m
      -XX:HeapBaseMinAddress=4048m -Xmx24m -XX:MaxPermSize=24m
      -XX:HeapBaseMinAddress=3036m -Xmx32m -XX:MaxPermSize=32m
      Specifying adresses 1968m and lower as a value for -XX:HeapBaseMinAddress results in a crash. The failure is specific to solaris-sparcv9.

      $ uname -a
      SunOS vm-v440-02 5.11 snv_150 sun4u sparc SUNW,Sun-Fire-V440

      $ /java/re/jdk/7/promoted/all/b126/binaries/solaris-sparcv9/bin/java -d64 -XX:HeapBaseMinAddress=1968m -version
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0xffffffff76420ea4, pid=10056, tid=2
      #
      # JRE version: 7.0-b126
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (20.0-b06 mixed mode solaris-sparc compressed oops)
      # Problematic frame:
      # j java.lang.Object.<init>()V+0
      #
      # An error report file with more information is saved as:
      # /tmp/sd/hs_err_pid10056.log
                       -------------
        0 (0x000000007b0a8e60) [00|00| 2]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        1 (0x000000007b0a8e80) [00|00| 3]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        2 (0x000000007b0a8ea0) [00|00| 4]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        3 (0x000000007b0a8ec0) [00|00| 5]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        4 (0x000000007b0a8ee0) [00|00| 7]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        5 (0x000000007b0a8f00) [00|00| 8]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        6 (0x000000007b0a8f20) [00|00| 9]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        7 (0x000000007b0a8f40) [00|00| 12]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        8 (0x000000007b0a8f60) [00|00| 16]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       [ 0x0000000000000000]
                       -------------
        9 (0x000000007b0a8f80) [00|b8| 17]
                       [ 0x000000007b0082a8]
                       [ 0x0000000000000000]
                       [ 0xffffffff80800000]
                       -------------
      #
      # If you would like to submit a bug report, please visit:
      # http://java.sun.com/webapps/bugreport/crash.jsp
      #
      Abort

            Assignee:
            Unassigned
            Reporter:
            Sergey Dolgov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: