7014526: "java -version" crash on sparc with some values of HeapBaseMinAddress

Make default HeapBaseMinAddress the minimum that can be specified.

Reviewed-by: minqi, kvn, tschatzl, dholmes